# OtusHW3

./: .travis.yml  CMakeLists.txt
include/: SimpleVector.h  allocator.h
src/: main.cpp
